Updated readme and cleaned up the rest endpoints url